; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/core/extr_sysfs.c_usb_create_sysfs_dev_files.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/core/extr_sysfs.c_usb_create_sysfs_dev_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_device = type { %struct.device }
%struct.device = type { i32 }

@dev_bin_attr_descriptors = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_create_sysfs_dev_files(%struct.usb_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_device*, align 8
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  store %struct.usb_device* %0, %struct.usb_device** %3, align 8
  %6 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %7 = getelementptr inbounds %struct.usb_device, %struct.usb_device* %6, i32 0, i32 0
  store %struct.device* %7, %struct.device** %4, align 8
  %8 = load %struct.device*, %struct.device** %4, align 8
  %9 = call i32 @device_create_bin_file(%struct.device* %8, i32* @dev_bin_attr_descriptors)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %38

13:                                               ; preds = %1
  %14 = load %struct.device*, %struct.device** %4, align 8
  %15 = call i32 @add_persist_attributes(%struct.device* %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  br label %38

19:                                               ; preds = %13
  %20 = load %struct.device*, %struct.device** %4, align 8
  %21 = call i32 @add_power_attributes(%struct.device* %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %19
  br label %38

25:                                               ; preds = %19
  %26 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %27 = call i64 @is_root_hub(%struct.usb_device* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %36

29:                                               ; preds = %25
  %30 = load %struct.device*, %struct.device** %4, align 8
  %31 = call i32 @add_default_authorized_attributes(%struct.device* %30)
  store i32 %31, i32* %5, align 4
  %32 = load i32, i32* %5, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %29
  br label %38

35:                                               ; preds = %29
  br label %36

36:                                               ; preds = %35, %25
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* %2, align 4
  br label %42

38:                                               ; preds = %34, %24, %18, %12
  %39 = load %struct.usb_device*, %struct.usb_device** %3, align 8
  %40 = call i32 @usb_remove_sysfs_dev_files(%struct.usb_device* %39)
  %41 = load i32, i32* %5, align 4
  store i32 %41, i32* %2, align 4
  br label %42

42:                                               ; preds = %38, %36
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @device_create_bin_file(%struct.device*, i32*) #1

declare dso_local i32 @add_persist_attributes(%struct.device*) #1

declare dso_local i32 @add_power_attributes(%struct.device*) #1

declare dso_local i64 @is_root_hub(%struct.usb_device*) #1

declare dso_local i32 @add_default_authorized_attributes(%struct.device*) #1

declare dso_local i32 @usb_remove_sysfs_dev_files(%struct.usb_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
